Fix focus when using --new-tab

Note that Konsole is not un-minimized ATM.

BUG: 421408
FIXED-IN: 20.08

https://invent.kde.org/utilities/konsole/-/merge_requests/177
(cherry picked from commit 999f6e373e1ebd9538b9d0d5fdd367ec985c0954)