src/Application.cpp
@@ -260,6 +260,7 @@ int Application::newInstance()
             finalizeNewMainWindow(window);
         } else {
             window->show();
+            window->activateWindow();
         }
     }
 
